<resources>
    <string name="appName">FileExplorer</string>

    <string name="openDrawer">Open Navigation Drawer</string>
    <string name="closeDrawer">Close Navigation Drawer</string>

    <string name="menuHome">Home</string>
    <string name="menuInternal">Internal Storage</string>
    <string name="menuCard">SD Card</string>
    <string name="menuAbout">About</string>

    <string name="internalFragment">Internal Fragment</string>
    <string name="fragmentCard">SD Card Fragment</string>
    <string name="folder">Folder</string>

    <string name="sort_by">Sort By</string>
    <string name="sort_name_asc">Name (A-Z)</string>
    <string name="sort_name_desc">Name (Z-A)</string>
    <string name="sort_time_asc">Oldest First</string>
    <string name="sort_time_desc">Newest First</string>
    <string name="sort_size_asc">Smallest First</string>
    <string name="sort_size_desc">Largest First</string>
</resources>