<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_name_asc"
        android:title="@string/sort_name_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_name_desc"
        android:title="@string/sort_name_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_time_asc"
        android:title="@string/sort_time_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_time_desc"
        android:title="@string/sort_time_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_size_asc"
        android:title="@string/sort_size_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_size_desc"
        android:title="@string/sort_size_desc"
        app:showAsAction="never" />
</menu>
